# auto-torrent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: codebase.md  handoff.md  learnings.md
auto_torrent/: abb.py  audnex.py  cli.py  config.py  download.py  openlibrary.py  scoring.py  stream.py  torrent.py  tpb.py  types.py
auto_torrent/server/: agent.py  app.py  audiobookshelf.py  llm.py  profiles.py  recommend.py  settings.py  sms.py  vision.py  worker.py
auto_torrent/server/jobs/: __init__.py  api.py  bus.py  events.py  store.py  types.py  worker.py
deploy/: atb-arq-worker.service
tests/: conftest.py  test_audnex.py  test_jobs_api.py  test_jobs_bus.py  test_jobs_events.py  test_jobs_store.py  test_jobs_types.py  test_jobs_worker.py  test_parsing.py  test_scoring.py  test_server_app.py  test_server_chat.py  test_server_llm.py  test_server_profiles.py  test_server_recommend.py  test_server_recommend_route.py  test_server_worker.py  test_settings.py  test_stream.py  test_tpb.py
tests/fixtures/: abb_detail.html  abb_search.html
