[project]
name = "auto-torrent"
version = "0.1.0"
description = "Search AudiobookBay and download audiobooks via aria2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "libtorrent>=2.0.11",
    "rapidfuzz>=3.14.3",
    "requests[socks]>=2.32.5",
    "requests-cache>=1.2.1",
]

[project.scripts]
auto-torrent = "auto_torrent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
