[project]
name = "auto-torrent"
version = "0.1.0"
description = "Search AudiobookBay and download audiobooks via aria2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "libtorrent>=2.0.11",
    "rapidfuzz>=3.14.3",
    "requests[socks]>=2.32.5",
    "requests-cache>=1.2.1",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "twilio>=9.0",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "claude-agent-sdk>=0.1.73",
    "redis>=5.0",
    "arq>=0.26",
    "sse-starlette>=2.1",
]

[project.scripts]
auto-torrent = "auto_torrent.cli:main"
atb = "auto_torrent.cli:main_atb"
atv = "auto_torrent.cli:main_atv"
atb-server = "auto_torrent.server.app:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "fakeredis>=2.26",
    "pytest-asyncio>=0.24",
]
